--- a/.gitmodules
+++ b/.gitmodules
@@ -6,16 +6,16 @@
 	url = git://github.com/ccnz/ushahidi-plugins-smsautomate.git
 [submodule "plugins/kml"]
 	path = plugins/kml
-	url = git@github.com:ccnz/ushahidi-plugins-kml.git
+	url = git://github.com/ccnz/ushahidi-plugins-kml.git
 [submodule "plugins/fullscreenmap"]
 	path = plugins/fullscreenmap
-	url = git@github.com:ccnz/ushahidi-plugins-fullscreenmap.git
+	url = git://github.com/ccnz/ushahidi-plugins-fullscreenmap.git
 [submodule "plugins/findlocation"]
 	path = plugins/findlocation
-	url = git@github.com:ccnz/ushahidi-plugins-findlocation.git
+	url = git://github.com/ccnz/ushahidi-plugins-findlocation.git
 [submodule "plugins/actionable"]
 	path = plugins/actionable
-	url = git@github.com:ccnz/ushahidi-plugins-actionable.git
+	url = git://github.com/ccnz/ushahidi-plugins-actionable.git
 [submodule "plugins/mobile"]
 	path = plugins/mobile
-	url = git@github.com:ccnz/ushahidi-plugins-mobile.git
+	url = git://github.com/ccnz/ushahidi-plugins-mobile.git
