added mapsync pluging -- public url

--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "plugins/mobile"]
 	path = plugins/mobile
 	url = git://github.com/ccnz/ushahidi-plugins-mobile.git
+[submodule "plugins/mapsync"]
+	path = plugins/mapsync
+	url = git://github.com/Br3nda/mapsync.git
