Add tedx theme and plugin as submodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,13 @@
 [submodule "application/i18n"]
 	path = application/i18n
 	url = git://github.com/ushahidi/Ushahidi-Localizations.git
+[submodule "timespan"]
+	path = plugins/timespan
+	url = git://github.com/jetherton/timespan.git
+[submodule "plugins/tedx"]
+	path = plugins/tedx
+	url = git://github.com/rjmackay/Ushahidi-tedx-plugin.git
+[submodule "themes/tedx"]
+	path = themes/tedx
+	url = git://github.com/rjmackay/Ushahidi-tedx-theme.git
+
